--- a/style.css
+++ b/style.css
@@ -1,71 +1,86 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    font-family: poppins, sans-serif;
-    font-weight: 700;
-    box-sizing: border-box;
-    }
-   .input-original{
-    height: 20%;
-    background-color: white;
-    margin: 10px 0 0;
-    padding: 10px;
-    color: black;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    width: -webkit-fill-available;
-   }
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: poppins, sans-serif;
+  font-weight: 700;
+  box-sizing: border-box;
+}
+.input-original {
+  height: 20%;
+  background-color: white;
+  margin: 10px 0 0;
+  padding: 10px;
+  color: black;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  width: -webkit-fill-available;
+  padding: 3%;
+  margin: 3% 3% 3% 0%;
+}
 
-    #container{
-        background-color: #03249C;
-        overflow: hidden;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        padding: 20px;
-        height: 100%;
-        width: 100%;
-        }
-        p{
-            color: white;
-        }
-        #bg-container svg{
-        width: 100%;
-        height: 90%;
-        }
-        #content-container{
-        height: 100%;
-        width: 30%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        }
-        #content-container h1{
-        color: #FFF;
-        font-weight: 900;
-        font-size: 70px;
-        line-height: 1em;
-        margin-bottom: 30px;
-        }
-        #content-container p{
-        line-height: 1.8em;
-        font-weight: 500;
-        }
-        #content-container button{
-        border: none;
-        outline: none;
-        color: #03249C;
-        background-color: rgb(255, 255, 255)
-        ;
-        padding: 16px 0px;
-        border-radius: 40px;
-        font-size: 16px;
-        width: 160px;
-        margin-top: 30px;
-        cursor: pointer;
-        }
-        #content-container button:hover{
-        opacity: 0.9;
-        }
-        
+#container {
+  background-color: #03249c;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 20px;
+  min-height: 100vh;
+  width: 100%;
+  align-items: center;
+}
+.stuartLogo{
+    margin: 3%;
+}
+p {
+  color: white;
+}
+#bg-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#bg-container svg {
+  width: 90%;
+  height: 90%;
+  padding-left: 20%;
+}
+#content-container {
+  height: 100%;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#content-container h1 {
+  color: #fff;
+  font-weight: 900;
+  font-size: 70px;
+  line-height: 1em;
+  margin-bottom: 30px;
+}
+#content-container p {
+  line-height: 1.8em;
+  font-weight: 500;
+}
+#content-container button {
+  border: none;
+  outline: none;
+  color: #03249c;
+  background-color: rgb(255, 255, 255);
+  padding: 16px 0px;
+  border-radius: 40px;
+  font-size: 16px;
+  width: 160px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+#content-container button:hover {
+  opacity: 0.9;
+}
