--- a/style.css
+++ b/style.css
@@ -58,10 +58,15 @@ p {
   flex-direction: column;
   justify-content: space-between;
 }
+input{
+    border-color:transparent;
+    outline: none;
+    width: -webkit-fill-available;
+}
 #content-container h1 {
   color: #fff;
   font-weight: 900;
-  font-size: 70px;
+  font-size: 90px;
   line-height: 1em;
   margin-bottom: 30px;
 }
