--- a/style.css
+++ b/style.css
@@ -63,6 +63,11 @@ input{
     outline: none;
     width: -webkit-fill-available;
 }
+.error{
+    font-size: 15px;
+    color: red;
+   
+}
 #content-container h1 {
   color: #fff;
   font-weight: 900;
