--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   padding: 0px;
   margin: 0px;
-  font-family: poppins, sans-serif;
+  font-family: gt-walsheim, sans-serif;
   font-weight: 700;
   box-sizing: border-box;
 }
